[gd_scene load_steps=7 format=3 uid="uid://6k4mhx0mnina"]

[ext_resource type="Texture2D" uid="uid://db7mu3gncxypo" path="res://assets/Test.png" id="1_0hnua"]
[ext_resource type="Script" path="res://src/Scripts/Enemy.gd" id="1_73tb8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrjkr"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kg0b"]
size = Vector2(16.3636, 16.3636)

[sub_resource type="CircleShape2D" id="CircleShape2D_6k7b4"]
radius = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cntt2"]
size = Vector2(20, 1)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_73tb8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.411765, 0, 0.00784314, 1)
self_modulate = Color(0.411765, 0, 0.00784314, 1)
texture = ExtResource("1_0hnua")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_xrjkr")

[node name="PlayerPos" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.68221e-07, -2.68221e-07)
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_8kg0b")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(-10, 10)
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_6k7b4")

[node name="Area2D5" type="Area2D" parent="."]
position = Vector2(10, 10)
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_6k7b4")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(-10, -12)
rotation = 1.5708
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_cntt2")

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2(10, -12)
rotation = 1.5708
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_cntt2")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="body_entered" from="Area2D5" to="." method="_on_area_2d_5_body_entered"]
[connection signal="body_exited" from="Area2D5" to="." method="_on_area_2d_5_body_exited"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="." method="_on_area_2d_3_body_exited"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_4_body_entered"]
[connection signal="body_exited" from="Area2D4" to="." method="_on_area_2d_4_body_exited"]
